--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "express": ">= 3",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "mkdirp": "*",
+    "imagemagick": "*",
+    "batch": "*"
   }
 }
